--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A registration and login flow",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "start": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "start:server": "cd server && npm start",
     "start:client": "webpack-dev-server --open --mode development",
@@ -26,6 +26,8 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "concurrently": "^5.1.0",
@@ -39,6 +41,7 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
@@ -50,6 +53,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-jest": "^25.1.0",
     "classnames": "^2.2.6",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
@@ -57,5 +61,13 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "validator": "^12.2.0"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "<rootDir>/src/__mocks__/styleMock.js"
+    }
   }
 }
